z-index issue

--- a/stylesheets/_blog.css
+++ b/stylesheets/_blog.css
@@ -58,7 +58,6 @@ height: 752px;
 			height: 200px;
 			overflow: hidden;
 			background-color: white;
-			z-index: 100;
 			&:hover img{
 				transform: scale3d(1,1,1);
 				opacity: 1;
